# Agent-SDK-Practices-Class-Assignments

./: README.md
agent_with_liteLLm/project2/: main.py
helpfull_agent/: main.py  pyproject.toml
practice-agents/: pyproject.toml
practice-agents/src/practice_agents/: main.py
