[project]
name = "practice-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "laibathecoder", email = "laibanazofficial@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
practice-agents = "practice_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
